--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SWC | มืออาชีพงานออนไลน์</title>
+    <title>SWC | Online Professional Team</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/img/logo.jpg" />
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Scaffold Bootstrap Template - Index</title>
+    <!-- <title>Scaffold Bootstrap Template - Index</title> -->
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
+    <!-- <link href="assets/img/favicon.png" rel="icon" /> -->
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
